--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-plugin-import": "^2.28.0",
     "jest": "^29.6.2",
+    "prettier": "^3.2.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
